fix: known bugs fixed & optimized

--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
   "license": "proprietary",
   "authors": [
     {
-      "name": "Ilaiyaraja",
-      "email": "ilayraja@cartrabbit.in"
+      "name": "Ilaiyaraja,Sabhari",
+      "email": "ilayraja@cartrabbit.in,sabhari@cartrabbit.in"
     }
   ],
   "require": {
